--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "db:exec:profiles:dev": "npx --yes supabase db execute --file ./.sql/profiles.sql --db-url %DEV_DB_URL%",
     "db:exec:profiles:prod": "npx --yes supabase db execute --file ./.sql/profiles.sql --db-url %PROD_DB_URL%",
     "db:exec:stats:dev": "npx --yes supabase db execute --file ./.sql/stats.sql --db-url %DEV_DB_URL%",
     "db:exec:stats:prod": "npx --yes supabase db execute --file ./.sql/stats.sql --db-url %PROD_DB_URL%",
     "db:exec:all:dev": "pnpm db:exec:profiles:dev && pnpm db:exec:stats:dev",
     "db:exec:all:prod": "pnpm db:exec:profiles:prod && pnpm db:exec:stats:prod"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,css,md}": "prettier --write"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -47,6 +51,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
