--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "hls.js": "^1.6.10",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
