feat(profile): add feature flags for cover/avatar/featured-media

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
+    "stream:dupes": "node scripts/find-duplicates.mjs",
+    "stream:routes": "node scripts/check-routes.mjs",
+    "stream:legacy": "node scripts/find-legacy-refs.mjs",
+    "stream:doctor": "node scripts/stream-doctor.mjs",
     "db:exec:profiles:dev": "npx --yes supabase db execute --file ./.sql/profiles.sql --db-url %DEV_DB_URL%",
     "db:exec:profiles:prod": "npx --yes supabase db execute --file ./.sql/profiles.sql --db-url %PROD_DB_URL%",
     "db:exec:stats:dev": "npx --yes supabase db execute --file ./.sql/stats.sql --db-url %DEV_DB_URL%",
@@ -51,6 +55,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "glob": "^10.4.5",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
