--- a/package.json
+++ b/package.json
@@ -49,17 +49,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "glob": "^10.4.5",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
+    "postcss": "8.4.35",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "3.4.12",
     "typescript": "^5"
   }
 }
